Valitron otettu käyttöön.

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,6 @@
 		"twig/twig": "~1.5",
 		"raveren/kint": "v0.9",
 		"zeuxisoo/slim-whoops": "0.3.0",
-		"vlucas/valitron": "v1.4.0"
+		"vlucas/valitron": ">=v1.4.0"
 	}
 }
